crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mor-quoted-terminator.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Morphology tier with quoted terminators (+\"/. and +\".)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: quoted new line terminator in %mor tier",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Source: word-features/1082.cha",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "see",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "lemma": "it",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "lemma": "say",
                  "pos": "verb"
                }
              }
            ],
            "terminator": {
              "type": "quoted_period_simple"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "OBJ"
              },
              {
                "head": 1,
                "index": 3,
                "relation": "COMP"
              },
              {
                "head": 3,
                "index": 4,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "see",
              "content": [
                {
                  "content": "see",
                  "type": "text"
                }
              ],
              "raw_text": "see",
              "type": "word"
            },
            {
              "cleaned_text": "it",
              "content": [
                {
                  "content": "it",
                  "type": "text"
                }
              ],
              "raw_text": "it",
              "type": "word"
            },
            {
              "cleaned_text": "say",
              "content": [
                {
                  "content": "say",
                  "type": "text"
                }
              ],
              "raw_text": "say",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "quoted_period_simple"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "the",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "lemma": "bear",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Past"
                  ],
                  "lemma": "say",
                  "pos": "verb"
                }
              }
            ],
            "terminator": {
              "type": "quoted_new_line"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 2,
                "index": 1,
                "relation": "DET"
              },
              {
                "head": 0,
                "index": 2,
                "relation": "ROOT"
              },
              {
                "head": 2,
                "index": 3,
                "relation": "COMP"
              },
              {
                "head": 3,
                "index": 4,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "the",
              "content": [
                {
                  "content": "the",
                  "type": "text"
                }
              ],
              "raw_text": "the",
              "type": "word"
            },
            {
              "cleaned_text": "bear",
              "content": [
                {
                  "content": "bear",
                  "type": "text"
                }
              ],
              "raw_text": "bear",
              "type": "word"
            },
            {
              "cleaned_text": "said",
              "content": [
                {
                  "content": "said",
                  "type": "text"
                }
              ],
              "raw_text": "said",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "quoted_new_line"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;00.",
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
