crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__mor-translation-gra.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "heb"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Hagar",
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": "Inbal",
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "Moshe",
            "role": "Father",
            "speaker_code": "FAT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "3;03.11",
        "corpus": "BermanLong",
        "language": "heb",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "BermanLong",
        "language": "heb",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "BermanLong",
        "language": "heb",
        "role": "Father",
        "speaker": "FAT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "15-FEB-1990",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "mor translation with gra",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "category": "nonword",
              "content": [
                {
                  "content": "a",
                  "type": "text"
                }
              ],
              "raw_text": "&~a",
              "span": {
                "end": 285,
                "start": 282
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "FAT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "Hagāri",
                  "pos": "x"
                }
              }
            ],
            "terminator": ".",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "Hagāri",
                  "type": "text"
                }
              ],
              "raw_text": "Hagāri",
              "span": {
                "end": 302,
                "start": 294
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "FAT"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "ma",
                  "pos": "x"
                }
              }
            ],
            "terminator": "?",
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "ma",
                  "type": "text"
                }
              ],
              "raw_text": "ma",
              "span": {
                "end": 357,
                "start": 355
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "3;03.11",
        "corpus": "BermanLong",
        "language": "heb",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": "Hagar",
      "role": "Child"
    },
    "FAT": {
      "birth_date": null,
      "code": "FAT",
      "id": {
        "corpus": "BermanLong",
        "language": "heb",
        "role": "Father",
        "speaker": "FAT"
      },
      "name": "Moshe",
      "role": "Father"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "BermanLong",
        "language": "heb",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": "Inbal",
      "role": "Mother"
    }
  }
}
